Работает loader на 6-й версии комплиятора

--- a/sources/DLoader/DLoader.uvprojx
+++ b/sources/DLoader/DLoader.uvprojx
@@ -10,8 +10,8 @@
       <TargetName>DLoader</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
-      <uAC6>0</uAC6>
+      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
+      <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F437ZITx</Device>
@@ -328,15 +328,15 @@
             <uC99>1</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>1</v6Lang>
-            <v6LangP>1</v6LangP>
+            <v6Lang>5</v6Lang>
+            <v6LangP>8</v6LangP>
             <vShortEn>1</vShortEn>
             <vShortWch>1</vShortWch>
             <v6Lto>0</v6Lto>
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
             <VariousControls>
-              <MiscControls></MiscControls>
+              <MiscControls>-Wno-padded -Wno-missing-variable-declarations -Wno-extra-semi-stmt -Wno-implicit-int-conversion -Wno-unused-parameter -Wno-missing-noreturn -Wno-bad-function-cast -Wno-switch-enum -Wno-covered-switch-default -Wno-sign-conversion -Wno-cast-align -Wno-old-style-cast  -Wno-c++98-compat-pedantic</MiscControls>
               <Define>USE_HAL_DRIVER,STM32F437xx,LOADER</Define>
               <Undefine></Undefine>
               <IncludePath>..\common\libs\STM32Cube_F4\Drivers\CMSIS\Include;..\common\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\common\libs\STM32Cube_F4\Middlewares\Third_Party\FatFs\src;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Core\Inc;..\common\libs\STM32Cube_F4\Middlewares\ST\STM32_USB_Host_Library\Class\MSC\Inc;..\common\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;.\src\Hardware\FatFS;.\src\Hardware\HAL;.\src\Hardware\USBH;.\src;..\</IncludePath>
@@ -858,16 +858,6 @@
               <FileName>Font.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\common\Display\Font\Font.h</FilePath>
-            </File>
-            <File>
-              <FileName>Font8.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\Font8.h</FilePath>
-            </File>
-            <File>
-              <FileName>Font5.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\common\Display\Font\Font5.h</FilePath>
             </File>
           </Files>
         </Group>
