--- a/sources/VS/CMakeLists.txt
+++ b/sources/VS/CMakeLists.txt
@@ -4,14 +4,15 @@ cmake_minimum_required(VERSION 2.9)
 if (COMMAND cmake_policy)
     # Libraries linked via full path no longer produce linker search paths
     cmake_policy (SET CMP0003 NEW)
+
     # INTERFACE_LINK_LIBRARIES defines the link interface
     cmake_policy (SET CMP0022 NEW)
-#    # Disallow use of the LOCATION target property - so we set to OLD as we still need it
-#    cmake_policy (SET CMP0026 OLD)
+
     # MACOSX_RPATH is enabled by default
     cmake_policy (SET CMP0042 NEW)
-#    # Honor the visibility properties for SHARED target types only
-#    cmake_policy (SET CMP0063 OLD)
+
+    # MSVC runtime library flags are selected by an abstraction.
+    cmake_policy (SET CMP0091 NEW)
 endif ()
 
 # Set project name
