--- a/sources/Panel/CMakeLists.txt
+++ b/sources/Panel/CMakeLists.txt
@@ -35,16 +35,16 @@ file(GLOB COMMON          ../common/Command.h
 file(GLOB SRC             src/*.h src/*.cpp)
 file(GLOB DISPLAY         src/Display/*.h src/Display/*.cpp)
 file(GLOB DISPLAY_FONT    ../common/Display/Font/Font*.*)
-file(GLOB DISPLAY_TEXT    src/Display/Text/*)
+file(GLOB DISPLAY_TEXT    src/Display/Text/*.*)
 file(GLOB HARDWARE        src/Hardware/*.h src/Hardware/*.cpp)
-file(GLOB HARDWARE_CMSIS  src/Hardware/CMSIS/*)
-file(GLOB HARDWARE_HAL    src/Hardware/HAL/*)
-file(GLOB HARDWARE_STM32  src/Hardware/stm32/*)
-file(GLOB SETTINGS        src/Settings/*)
-file(GLOB UTILS           src/Utils/*)
+file(GLOB HARDWARE_CMSIS  src/Hardware/CMSIS/*.*)
+file(GLOB HARDWARE_HAL    src/Hardware/HAL/*.*)
+file(GLOB HARDWARE_STM32  src/Hardware/stm32/*.*)
+file(GLOB SETTINGS        src/Settings/*.*)
+file(GLOB UTILS           src/Utils/*.*)
 file(GLOB VS              ../common/_VS/*.h)
 file(GLOB VS_STD_INCLUDES ../common/_VS/std_includes/*)
-file(GLOB VS_CMSIS        ../common/_VS/CMSIS/*)
+file(GLOB VS_CMSIS        ../common/_VS/CMSIS/*.*)
 
 set_source_files_properties(${LIBS_HAL} PROPERTIES HEADER_FILE_ONLY TRUE)
 
